--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li><a href="TeamProjects.html">TEAM PROJECTS</a></li>
         <li><a href="AdilBhayani.html">ADIL BHAYANI</a></li>
         <li><a href="SaviMohan.html">SAVI MOHAN</a></li>
-        <li><a href="MarkYep.html">Mark Yep</a></li>
+        <li><a href="MarkYep.html">MARK YEP</a></li>
         <li class="icon"><a href="javascript:void(0);" onclick="collapseMenu()">&#9776;</a></li>
     </ul>
     <div id="wrapper">
