--- a/MarkYep.html
+++ b/MarkYep.html
@@ -25,7 +25,7 @@
     </div>  
     <div id="footerBox">
         <p style="display:inline-block;vertical-align:top;">C.E.L.L. Corporation <br> Auckland, New Zealand <br> 2016</p>
-        <img src="images/uoalogo.png" style="width:181px;height:60px;display:inline-block;padding-top:3px;">
+        <img src="images/logo.png" style="width:60px;height:60px;display:inline-block;padding-top:3px;">
     </div> 
 </body>
 </html>
