added apk to site

--- a/TeamProjects.html
+++ b/TeamProjects.html
@@ -18,9 +18,11 @@
     <div id="wrapper">
         <div>
             <h1>Team Projects</h1>
+            <h3>Play Sound</h3>
             <p>
-                
+                Play Sound is an Android app which is able to play a variety of internet-popular sounds. The user selects a sound to play from a dropdown menu, and then taps the play button to listen.
             </p>
+            <button type="download" onclick="window.open('attachments/play_sound.apk')">Download!</button>
         </div>
     </div>  
     <div id="footerBox">
