updated home description

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <div>
             <h1>Welcome to C.E.L.L.</h1>
             <p>
-                
+                We are a team of 3 students studying Computer Systems Engineering and Computer Science at The University of Auckland. 
+                This BE(Hons)/BSc degree will provide us with a broad and in-depth knowledge of computers, programming, and computer systems.
             </p>
         </div>
     </div>  
