updated home description

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <div>
             <h1>Welcome to C.E.L.L.</h1>
             <p>
-                We are a team of 3 students studying Computer Systems Engineering and Computer Science at The University of Auckland. 
-                This BE(Hons)/BSc degree will provide us with a broad and in-depth knowledge of computers, programming, and computer systems.
+                We are a team of three students studying Computer Systems Engineering and Computer Science at The University of Auckland. 
+                This BE(Hons)/BSc degree will provide us with a broad and in-depth knowledge of computers, programming, and computer systems. <br><br>   
+                All of us are adept at coding with Python, Java, C/C++, and VHDL from our papers at university. Additionally in our own time we have learnt HTML, CSS, and JavaScript.
             </p>
         </div>
     </div>  
