--- a/AdilBhayani.html
+++ b/AdilBhayani.html
@@ -5,6 +5,7 @@
     <title>CELL - Adil</title>
     <link rel="stylesheet" href="styles/mystyle.css">
     <script src="scripts/main.js"></script>
+    <style>body, html { height: 100%; }</style>
 </head>
 <body>
     <ul class="topnav" id="myTopnav">
@@ -15,16 +16,16 @@
         <li><a href="MarkYep.html">MARK YEP</a></li>
         <li class="icon"><a href="javascript:void(0);" onclick="collapseMenu()">&#9776;</a></li>
     </ul>
-    <div id="wrapper">
+    <div id="wrapper" style="height:84%">
         <div>
             <h1>Adil Bhayani</h1>
             <p>
-                
+                I’m a computer enthusiast that is studying Computer Systems Engineering as a conjoint with Computer Science. I enjoy programming and have dedicated myself to learning as many languages as I can to be the best at any programming task. My ability to work in a team alongside my willingness to learn makes me the perfect person to work with in all kinds of projects. Challenges excite me and I find them to be a great way to further my skills while having fun solving the problems at hand. I have knowledge of coding in Java, C and Python alongside some knowledge of basic and web development, but am always eager to learn something new.
             </p>
         </div>
     </div>  
-    <div id="footerBox">
-        <p style="display:inline-block;vertical-align:top;">C.E.L.L. Corporation <br> Auckland, New Zealand <br> 2016</p>
+    <div id="footerBox" style="height:9%, min-height:66px">
+        <p style="display:inline-block;vertical-align:top;">C.E.L.L. Corporation <br> Auckland, New Zealand <br> 2017</p>
         <img src="images/logo.png" style="width:60px;height:60px;display:inline-block;padding-top:6px;">
     </div> 
 </body>
