--- a/MarkYep.html
+++ b/MarkYep.html
@@ -5,6 +5,7 @@
     <title>CELL - Mark</title>
     <link rel="stylesheet" href="styles/mystyle.css">
     <script src="scripts/main.js"></script>
+    <style>body, html { height: 100%; }</style>
 </head>
 <body>
     <ul class="topnav" id="myTopnav">
@@ -15,16 +16,22 @@
         <li><a class="active" href="MarkYep.html">MARK YEP</a></li>
         <li class="icon"><a href="javascript:void(0);" onclick="collapseMenu()">&#9776;</a></li>
     </ul>
-    <div id="wrapper">
+    <div id="wrapper" style="height:84%">
         <div>
             <h1>Mark Yep</h1>
-            <p>
-                
-            </p>
+            <p>I am interested in web and software development opportunities, and I have a passion for computer systems engineering and microprocessor programming. I really enjoy developing web applications using dynamic API calls. This year I took part in the Summer of Tech Auckland Hackfest, in which my team of 5 created a web app which mapped nearby dining dining discounts and directions to them. I worked mainly on the front end using JavaScript, HTML5 and Less CSS.</p>
+
+            <p>I study a conjoint Computer Systems Engineering and Computer Science degree at the University of Auckland. I took on this degree because of my interest in all parts of computer systems – especially the Internet of Things and low level computer architecture and design.</p>
+
+            <p>Aside from being a regular computer enthusiast, I also enjoy exercise and sports. In previous years I have represented Auckland in badminton at both the junior and senior age groups. I still play socially at the university club on a weekly basis. In my spare time I like to follow the latest consumer PC component news, or play StarCraft II with friends.</p>
+
+            <p>I have a strong work ethic and am extremely dedicated to any project that I work on. I dislike leaving work unfinished or not giving a task the entirety of my effort. At university I finished runner up in the optional extension of an assignment, worth no marks, which involved creating a card playing application to compete against other students.</p>
+
+            <p>From computer science I have experience coding with Python and Java, and from computer systems engineering I have experience coding with C, C++, and MATLAB. For all these papers I have excelled on the practical side of the course more than the theoretical, as I thoroughly enjoy the processes of developing useful, real-world applications.</p>
         </div>
     </div>  
-    <div id="footerBox">
-        <p style="display:inline-block;vertical-align:top;">C.E.L.L. Corporation <br> Auckland, New Zealand <br> 2016</p>
+    <div id="footerBox" style="height:9%, min-height:66px">
+        <p style="display:inline-block;vertical-align:top;">C.E.L.L. Corporation <br> Auckland, New Zealand <br> 2017</p>
         <img src="images/logo.png" style="width:60px;height:60px;display:inline-block;padding-top:6px;">
     </div> 
 </body>
