--- a/SaviMohan.html
+++ b/SaviMohan.html
@@ -5,6 +5,7 @@
     <title>CELL - Savi</title>
     <link rel="stylesheet" href="styles/mystyle.css">
     <script src="scripts/main.js"></script>
+    <style>body, html { height: 100%; }</style>
 </head>
 <body>
     <ul class="topnav" id="myTopnav">
@@ -15,16 +16,20 @@
         <li><a href="MarkYep.html">MARK YEP</a></li>
         <li class="icon"><a href="javascript:void(0);" onclick="collapseMenu()">&#9776;</a></li>
     </ul>
-    <div id="wrapper">
+    <div id="wrapper" style="height:84%">
         <div>
             <h1>Savi Mohan</h1>
-            <p>
-                
-            </p>
+            <p>Hi, I am a 2nd year student studying a Computer Systems Engineering and Computer Science conjoint degree. I am passionate about computers (as is probably evident from my course choices) and I have a strong interest in both software and hardware. I am interested in becoming a developer as I've had a strong interest in coding ever since I started programming microcontrollers in year 10 at high school, where I first learned about the potential of coding to solve real life problems. I am well suited for a programming role as my interest in software and experience with coding allows me to meet the demands and challenges of being a developer.</p>
+            
+            <p>I am keen to learn back end development, but front end development is also appealing to me. Website design is also of great interest to me. The Internet of Things (IoT) is an exciting and fast growing field that has greatly captured my interest.</p>
+
+            <p>In my free time I like to play video games, chess, cricket, badminton and squash. I also enjoy volunteering at my local retirement home.</p>
+
+            <p>I have the work ethic and adaptability needed to be an efficient and productive employee. I've developed these skills though having to manage a busy academic and social schedule and also working part-time, whilst maintaining an A grade average. I possess leadership skills that I've gained from being captain of my cricket team, problem solving skills that I've developed from programming in Python, Java, C and Matlab, organisational skills that I've learned from being a school house committee member and communication skills that I've gained from doing peer mentoring and mediator training.</p>
         </div>
     </div>  
-    <div id="footerBox">
-        <p style="display:inline-block;vertical-align:top;">C.E.L.L. Corporation <br> Auckland, New Zealand <br> 2016</p>
+    <div id="footerBox" style="height:9%, min-height:66px">
+        <p style="display:inline-block;vertical-align:top;">C.E.L.L. Corporation <br> Auckland, New Zealand <br> 2017</p>
         <img src="images/logo.png" style="width:60px;height:60px;display:inline-block;padding-top:6px;">
     </div> 
 </body>
