--- a/TeamProjects.html
+++ b/TeamProjects.html
@@ -5,6 +5,7 @@
     <title>CELL - Projects</title>
     <link rel="stylesheet" href="styles/mystyle.css">
     <script src="scripts/main.js"></script>
+    <style>body, html { height: 100%; }</style>
 </head>
 <body>
     <ul class="topnav" id="myTopnav">
@@ -15,7 +16,7 @@
         <li><a href="MarkYep.html">MARK YEP</a></li>
         <li class="icon"><a href="javascript:void(0);" onclick="collapseMenu()">&#9776;</a></li>
     </ul>
-    <div id="wrapper">
+    <div id="wrapper" style="height:84%">
         <div>
             <h1>Team Projects</h1>
             <h3>Play Sound</h3>
@@ -25,8 +26,8 @@
             <button type="download" onclick="window.open('attachments/play_sound.apk')">Download!</button>
         </div>
     </div>  
-    <div id="footerBox">
-        <p style="display:inline-block;vertical-align:top;">C.E.L.L. Corporation <br> Auckland, New Zealand <br> 2016</p>
+    <div id="footerBox" style="height:9%, min-height:66px">
+        <p style="display:inline-block;vertical-align:top;">C.E.L.L. Corporation <br> Auckland, New Zealand <br> 2017</p>
         <img src="images/logo.png" style="width:60px;height:60px;display:inline-block;padding-top:6px;">
     </div> 
 </body>
